--- a/index.html
+++ b/index.html
@@ -1,13 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample-Page</title>
+    <!-- css-link -->
+    <link rel="stylesheet" href="styles/index.css">
+
+    <!-- Free Font Awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
+    <!-- work-sans-font-link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
-<body>
-    <header></header>
-    <main></main>
+
+<body class="open-sans-body">
+    <!-- Header -->
+    <header>
+        <div class="header-container">
+            <div class="header-content">
+                <h2 class="header-title">All Thinks Are <br>
+                    Possible If You <br> believe</h2>
+
+                <p class="header-paragraph">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
+                    alteration
+                    in some form,
+                    by injected humour, or randomised words.
+                </p>
+
+                <div>
+                    <button class="h-button">Contact Us</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <main>
+        <section class="section-1">
+            <div class="s1-div-1"><img src="images/person.png" alt="image of a person"></div>
+            <div class="s1-div-2">
+                <h3 class="content-title">My failure of previous year</h3>
+                <p class="content-description">Country to popular bepef,Lorem ipsum is not <br>simply random text.It has
+                    roots in a piece of <br> classical Latin pterature from 45 BC,making it over <br>2000 years
+                    old.Richard McCpntock.</p>
+
+                <p class="s1-div-2-ul"><span class="check-mark"><i class="fa-solid fa-check"></i></span> Country to
+                    popular bepef, is not
+                    simply.</p>
+                <p class="s1-div-2-ul"><span class="check-mark"><i class="fa-solid fa-check"></i></span> Country to
+                    popular , is not simply.</p>
+                <p class="s1-div-2-ul"><span class="check-mark"><i class="fa-solid fa-check"></i></span> Country to
+                    popular bepef.</p>
+                <p class="s1-div-2-ul"><span class="check-mark"><i class="fa-solid fa-check"></i></span> Country to
+                    popular bepef, is not
+                    simply.</p>
+                <p class="s1-div-2-ul"><span class="check-mark"><i class="fa-solid fa-check"></i></span> Country to
+                    popular simply.</p>
+
+        </section>
+    </main>
     <footer></footer>
 </body>
+
 </html>
