--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Free Font Awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
+
     <!-- work-sans-font-link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,6 +64,32 @@
                 <p class="s1-div-2-ul"><span class="check-mark"><i class="fa-solid fa-check"></i></span> Country to
                     popular simply.</p>
 
+        </section>
+
+        <section class="section-2">
+            <h3 class="s2-title">My Plans</h3>
+            <div class="s2-div-container">
+                <div class="s2-content-div">
+                    <img src="images/icons/web.png" alt="icons of web development">
+                    <h4 class="content-div-title">Web Development</h4>
+                    <p class="content-div-description">I want to start</p></p>
+                </div>
+                <div class="s2-content-div">
+                    <img src="images/icons/js.png" alt="icons of javascript">
+                    <h4 class="content-div-title">Javascript</h4>
+                    <p class="content-div-description">I want to learn</p>
+                </div>
+                <div class="s2-content-div">
+                    <img src="images/icons/smoke.png" alt="icons of smoking habit">
+                    <h4 class="content-div-title">Smoking Habit</h4>
+                    <p class="content-div-description">I want to end</p>
+                </div>
+                <div class="s2-content-div">
+                    <img src="images/icons/ecom.png" alt="icons of ecommerce">
+                    <h4 class="content-div-title">ecommerce</h4>
+                    <p class="content-div-description">I want to develop</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
