--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
 
     <main>
+        <!-- Section 1 start -->
         <section class="section-1">
             <div class="s1-div-1"><img src="images/person.png" alt="image of a person"></div>
             <div class="s1-div-2">
@@ -64,9 +65,9 @@
                 <p class="s1-div-2-ul"><span class="check-mark"><i class="fa-solid fa-check"></i></span> Country to
                     popular simply.</p>
 
-        </section>
+        </section><!-- Section 1 end -->
 
-        <section class="section-2">
+        <section class="section-2"><!-- Section 2 start -->
             <h3 class="s2-title">My Plans</h3>
             <div class="s2-div-container">
                 <div class="s2-content-div">
@@ -91,6 +92,14 @@
                 </div>
             </div>
         </section>
+        <!-- End of the section 2 -->
+
+        <section class="section-3">
+            <div class="s3-div-container">
+                <p class="s3-div-title">Always keep a positive mindset</p> <!-- may be to a line break after 'positive' -->
+                <button class="s3-div-button">Call Now</button>
+            </div>
+        </section><!-- End of section 3 -->
     </main>
     <footer></footer>
 </body>
