--- a/index.html
+++ b/index.html
@@ -101,7 +101,30 @@
             </div>
         </section><!-- End of section 3 -->
     </main>
-    <footer></footer>
+
+    <footer>
+        <div class="footer-container">
+            <div class="container-1">
+                <h3 class="title">Future</h3>
+                <p class="description">There are many variations of web devlopment process will be raised in coming future,Ai is significantly effecting our learning process. Things are now easier than ever.Best of Luck to the all future web dev.</p>
+                <p class="white-color">Email: info@future.com</p>
+                <p class="white-color">Phone: 01500 000000</p><br>
+                <div class="footer-image">
+                    <img src="images/icons/fb.png" alt="image-icon of facebook">
+                    <img src="images/icons/twitter.png" alt="image icon of twitter">
+                    <img src="images/icons/youtube.png" alt="image-icon of youtube">
+                </div>
+            </div>
+            <div class="container-2">
+                <p class="c-2-title">Subscribe</p>
+                <input type="text" class="c2-input-type" placeholder="Enter your email"><br><br>
+                <button class="c2-button">Subscribe</button>
+            </div>
+    
+        </div>
+        <p class="copyright"><span class="copyright-span">&copy; 2025. by Rahat Alam. All rights reserved.</span></p>
+        
+    </footer>
 </body>
 
 </html>
